--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <!-- Location -->
         <div class="main-weather">
-            <div class="main-weather__current">
+            <div class="main-weather__current" id="contenedor">
                 <div class="main-weather__icon" id="icono">
                     <!-- <img src="icons/02d.png"> -->
                 </div>
@@ -56,7 +56,7 @@
 
         <div class="search">
             <form action="#" id="formulario">
-                <input type="text" placeholder="Buscar ciudad..." id="buscar">
+                <input type="text" placeholder="Buscar ciudad..." id="buscar" autocomplete="off">
             </form>
         </div>
 
